pushing in changes to fix the submission confirmation message alignment

--- a/app/src/sass/ub-base-styles.scss
+++ b/app/src/sass/ub-base-styles.scss
@@ -80,6 +80,12 @@
                 font-family: Roboto;
                 font-size: 0.9rem;
             }
+
+            .submitted-message.hs-form-7eaaeb92-f486-4996-adff-448c9b276b0c {
+                margin-top: 30px;
+                margin-left: -20px;
+            }
+
             .hs-form-field {
                 width: 100%;
                 float: left;
